# environmental_risk

./: .gitignore  README.md  bulk.json  bulk_wrapped.json  docker-compose.yml  package-lock.json  package.json
Data/: README.md  input_LLM.json  output_LLM.json
Data/rag_normas/: page_manifest.json
IA/: README.md
IA-LLM/: pyproject.toml
IA-LLM/optimizer_service/: dockerfile
IA-LLM/optimizer_service/app/: api.py  main.py  schemas.py
IA-LLM/optimizer_service/app/core/: evaluation.py  ga_ops.py  models.py  parser.py  solver.py  utils.py
backend/: Dockerfile  package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/common/geo/: haversine.ts
backend/src/common/pipes/: parse-objectid.pipe.ts
backend/src/companies/: companies.controller.ts  companies.module.ts  companies.service.ts
backend/src/companies/dto/: create-company.dto.ts  create-obra.dto.ts
backend/src/offers/: offers.controller.ts  offers.module.ts  offers.service.ts
backend/src/optimizer/: optimizer.module.ts  optimizer.service.ts
backend/src/suppliers/: suppliers.controller.ts  suppliers.module.ts  suppliers.service.ts
frontend/: package-lock.json  package.json
frontend/my-app/: package-lock.json
img/: README.md
infra/: READM.md
models/: README.md
notebook/: LLM_Reading.ipynb  LLM_Reading_agentic.ipynb  LLM_Reading_agentic_allowlist.ipynb  Readme.md  bioinspirado.ipynb  nsga_input.json  nsga_input_ficticio.json
services/: README.md
services/letter-api/: Dockerfile  README.md  requirements.txt
services/letter-api/app/: main.py
(+17 files in other folders)
